[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-rlm"
version = "0.3.0"
description = "Hermes Agent plugin — encapsulated session search via sub-model reasoning loop"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "matt" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
